add forms for backdrops

--- a/portfolio.html
+++ b/portfolio.html
@@ -213,6 +213,19 @@
               </li>
             </ul>
         </div>
+        <div class="footer-subscribe">
+          <h4 class="subscribe-form">Підпишіться на розсилку</h4>
+          <form>
+            <input class="subscribe-form-area" type="email" name="email" id="user_email" placeholder="E-mail"/>
+            <button type="button" class="subscribe-button">
+              <p class="subscribe"> Підписатися
+                <svg class="footer-subscribe-icon" width="24" height="24">
+                  <use href="./images/symbol-defs-optimized.svg#icon-icon-send"></use>
+                  </svg>
+              </p>
+            </button>
+          </form>
+        </div>
     </div>
     </footer>
   </body>
