--- a/index.html
+++ b/index.html
@@ -54,7 +54,26 @@
                       <use href="./images/symbol-defs-optimized.svg#icon-close"></use>
                     </svg>
                 </button>
-              </div>
+              <p class="backdrop-hero">Залиште свої дані, ми вам передзвонимо</p>
+              <form>
+                <div class="form-field">
+                  <label for="name">Ім'я</label>
+                  <input type="text" name="name" id="name">
+                </div>
+                <div class="form-field">
+                  <label for="tel">Телефон</label>
+                  <input type="tel" name="tel" id="tel">
+                </div>
+                <div class="form-field">
+                  <label for="mail">Пошта</label>
+                  <input type="email" name="mail">
+                </div>
+                <div class="form-field">
+                  <label for="comment">Коментар</label>
+                  <textarea name="comment" id="comment" rows="8" placeholder="Введіть текст"></textarea>
+                </div>
+              </form>
+              </div>  
             </div>
       </section>
       <section class="section">
@@ -343,7 +362,7 @@
               <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             </ul>
         </address>
-      </div>
+        </div>
         <div class="footer-social">
           <h4 class="join-social">приєднуйтесь</h4>
             <ul class="social-box">
@@ -377,7 +396,20 @@
               </li>
             </ul>
         </div>
-    </div>
+        <div class="footer-subscribe">
+          <h4 class="subscribe-form">Підпишіться на розсилку</h4>
+          <form>
+            <input class="subscribe-form-area" type="email" name="email" id="user_email" placeholder="E-mail"/>
+            <button type="button" class="subscribe-button">
+              <p class="subscribe"> Підписатися
+                <svg class="footer-subscribe-icon" width="24" height="24">
+                  <use href="./images/symbol-defs-optimized.svg#icon-icon-send"></use>
+                  </svg>
+              </p>
+            </button>
+          </form>
+        </div>
+      </div>
     </footer>
     <script src="./js/modal.js"></script>
   </body>
